--- a/emsystem/package.json
+++ b/emsystem/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@smallwei/avue": "^2.9.12",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
@@ -18,7 +19,7 @@
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "less": "^4.1.3",
-    "less-loader": "^11.0.0",
+    "less-loader": "^7.3.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
